Mapper test: update mapper testes